# Eatender

./: .gitignore  LICENSE  README.md  app.yaml  config.ini  config.py  docker-compose.yml  gunicorn.py  main.py  requirements.txt
project/: Dockerfile  config.ini  config.py  cron.py  gunicorn.py  main.py  pyproject.toml  requirements.txt  test.py  transfer.py  view.py
project/API/: router.py
project/MongoDB/: operation.py
project/api/: urls.py
project/food/: main.py  model.py  restaurant.py  stop_words.txt
project/food/google_maps/: info.py
project/food/ifoodie/: ifoodie.py
project/line/: flex_template.py  handler.py  message_event.py  postback_event.py  templates.py  urls.py  user_event.py
project/line/model/: create_vote.json  error.json  not_bound.json  restaurant_card_info.json  search_card_info.json  share_vote.json  show_more.json  tutorial.json  view_result.json  vote_card.json  vote_result.json  web_restaurant_card.json  welcome.json
project/react/: package-lock.json  package.json
project/react/public/: index.html
project/react/src/: index.js
project/static/css/: 404.css  about.css  animate.css  cardinfo.css  center-atom.css  dateChoose.css  fontawesome-all.min.css  landing.css  main.css  restaurant.css  share.css  style.css  style2.css  voteResult.css
project/static/fonts/: flexslider-icon-2.html  (+2 more)
project/templates/: 404.html  about.html  bound_notify.html  choose.html  home.html  liff_result.html  login.html  restaurant.html  share.html  vote_create.html  vote_result.html  vue_create.html
project/vote/: main.py  model.py  urls.py  view.py
project/weather/: main.py  urls.py
(+184 files in other folders)
